@@ -2,6 +2,8 @@ CHANGES
 -------
 Version 0.10 : In Progress
 --------------------------
+04/29/2018 Removed the cancel_remaining keyword argument from TaskGroup.next_done()
+
 04/28/2018 Added new "object" wait mode to TaskGroup.  It waits for the
            first non-None result to be returned by a task.  Then all 
            remaining tasks are cancelled.  For example:
